# ultima_db

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  consistency.yml  formal.yml
.superpowers/sdd/: task-3-report.md
autobench/: CLAUDE.md  Cargo.toml  program.md
autobench/baselines/: journal-commit.json  multiwriter-commit.json  smr-apply.json
autobench/baselines/reference-2026-06-17-3282af5/: journal-commit.json  multiwriter-commit.json  smr-apply.json
autobench/src/: baseline.rs  diskcheck.rs  journal_bench.rs  lib.rs  mw_commit_bench.rs  sampling.rs  smr_bench.rs  task_spec.rs
autobench/tasks/: TEMPLATE.md
autobench/tasks/journal-commit/: program.md  results.tsv
autobench/tasks/multiwriter-commit/: program.md  results.tsv
autobench/tasks/smr-apply/: program.md  results.tsv
autobench/tests/: journal_torture.rs  microbench_smoke.rs  mw_commit_torture.rs  smr_apply_torture.rs
autobench/tests/common/: mod.rs
bench-infra/: .env.example  .gitignore  Makefile  README.md  example.tfvars
bench-infra/ansible/: ansible.cfg  bench.yml  provision.yml
bench-infra/inventory/: terraform_to_inventory.sh
bench-infra/terraform/: main.tf  outputs.tf  variables.tf
bench_workloads/: Cargo.toml
bench_workloads/src/: bulk_load.rs  lib.rs  smallbank.rs  ycsb.rs
benches/: btree_get_bench.rs  btree_insert_mut_bench.rs  btree_remove_mut_bench.rs  bulk_load_bench.rs  checkpoint_impact_bench.rs  commit_scaling_bench.rs  disjoint_tables_bench.rs  multiwriter_persistence_bench.rs  multiwriter_scaling_bench.rs  singlewriter_persistence_bench.rs  smallbank_bench.rs  smallbank_common.rs  smallbank_fjall_bench.rs  smallbank_rocksdb_bench.rs  smallbank_scaling_bench.rs  snapshot_throughput.rs  store_bench.rs  table_insert_e2e_bench.rs  wal_bench.rs  ycsb_bench.rs  ycsb_bulk_load_ultima_batch_bench.rs  ycsb_bulk_load_ultima_sorted_bench.rs  ycsb_common.rs  ycsb_fjall_bench.rs  ycsb_multiwriter_bench.rs  ycsb_multiwriter_fjall_bench.rs  ycsb_multiwriter_rocksdb_bench.rs  ycsb_redb_bench.rs  ycsb_rocksdb_bench.rs
compare_benches/: Cargo.toml
compare_benches/benches/: smallbank_fjall_bench.rs  smallbank_rocksdb_bench.rs  ycsb_bulk_load_fjall_bench.rs  ycsb_bulk_load_redb_bench.rs  ycsb_bulk_load_rocksdb_bench.rs  ycsb_fjall_bench.rs  ycsb_multiwriter_fjall_bench.rs  ycsb_multiwriter_rocksdb_bench.rs  ycsb_redb_bench.rs  ycsb_rocksdb_bench.rs
compare_benches/src/: lib.rs
docs/: ARCHITECTURE.md  YCSB_benchmark_implementation.md  architecture-comparison.md  configuration.md  consistency-verification-elle-2026-07-07.md  consistency-verification-elle-run-2026-07-17.md  isolation-levels.md  security-review-2026-06-12.md
docs/bench-results/: 2026-06-12-review-fixes-ab-raw.txt  2026-06-12-review-fixes-ab.md  2026-06-12-review-fixes-noise-floor.txt  wal-bench-coalesced.txt  wal-bench-results.txt
docs/benchmarks/: baseline-2026-06-17-3282af5.md  btree-fanout-t-sweep-2026-07-09.md  competitor-nvme-2026-06-26.md  competitor-nvme-2026-07-13.md  competitor-nvme-2026-07-18.md  shared-vals-nvme-2026-07-18.md  smr-fanout-fixedvec-nvme-2026-07-18.md  smr-vs-eventual-nvme-2026-07-14.md  wal-preallocation-ab-2026-06-20.md
docs/tasks/: task10_ycsb_comparison_benchmarks.md  task11_multiwriter_occ.md  task12_smr_determinism.md  task13_persistence.md  task14_smallbank_bench.md  task15_three_phase_consistent_persistence.md  task16_custom_indexes.md  task17_metrics_observability.md  task18_concurrent_writes.md  task19_key_level_occ.md  task2-crud-operations.md  task20_multiwriter_commit_throughput.md  task21_serializable_isolation.md  task22_vector_search.md  task23_bulk_load.md  task24_vector_restore.md  task25_simd_distance.md  task26_journal.md  task27_snapshot_stream.md  task28_durability_failure_handling.md  task28_eventual_durability_watermark.md  task29_durability_failure_handling.md  task3-mvcc-design.md  task30_wal_backends.md  task31_coalesced_wal_write.md  task32_coalesced_journal_write.md  task33_windowed_point_read.md  task34_windowed_range_read.md  task35_autobench_perf_harness.md  task36_segment_preallocation.md  task37_wal_preallocation.md  task38_wal_inline_fsync.md  task39_parking_lot_migration.md  task40_vector_input_validation.md  task41_elle_consistency_harness.md  task41_index_ddl_conflict.md  (+19 more)
examples/: basic_usage.rs  bulk_load_10m.rs  bulk_restore.rs  concurrent_writes.rs  fanout_microbench.rs  multi_store.rs  profile_commit.rs  ssi_cost.rs
formal/: README.md  WRITEUP.md
scripts/: bench_history.sh  elle_check.sh  elle_mutation.sh  fanout_ab.sh  fanout_micro_ab.sh  plot_fanout_asymmetry.py  smr_apply_ab.sh  stamp_license_headers.sh
src/: btree.rs  bulk_load.rs  checkpoint.rs  error.rs  fulltext.rs  index.rs  intents.rs  lib.rs  metrics.rs  mutation.rs  persistence.rs  registry.rs  store.rs  table.rs  test_scratch.rs  transaction.rs  wal.rs
tasks/: task1_init.md
tests/: bulk_load.rs  corruption_recovery.rs  custom_index_api.rs  fulltext_integration.rs  persistence_integration.rs  snapshot_stream.rs  store_integration.rs  wal_inline_fsync.rs  wal_preallocation.rs
ultima_journal/: Cargo.toml
ultima_journal/benches/: append_throughput.rs
ultima_journal/src/: bench_support.rs  durability.rs  error.rs  lib.rs  notifier.rs  stable_value.rs
ultima_journal/src/journal/: mod.rs  segment.rs  segment_pipeline.rs  writer.rs
ultima_journal/tests/: journal_integration.rs  stable_value_integration.rs
ultima_vector/: Cargo.toml  NOTICE  README.md
ultima_vector/benches/: distance.rs
ultima_vector/examples/: bulk_restore.rs  filtered_search.rs  quick_search.rs  transactional.rs  with_persistence.rs
ultima_vector/src/: collection.rs  distance.rs  error.rs  filter.rs  lib.rs  row.rs  validate.rs
ultima_vector/src/distance/: mod.rs  scalar.rs  simd.rs
ultima_vector/src/hnsw/: insert.rs  level.rs  mod.rs  params.rs  search.rs
ultima_vector/tests/: concurrency.rs  filtered.rs  integration.rs  persistence.rs  restore.rs
ultima_vector/tests/common/: mod.rs
(+97 files in other folders)
