[package]
name = "ultima-db"
version = "0.1.0"
edition = "2024"
description = "Embedded in-memory B-tree store with MVCC"

[dependencies]
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.14", features = ["criterion", "flamegraph"] }
rand = "0.9"

[[bench]]
name = "store_bench"
harness = false

[[bench]]
name = "ycsb_bench"
harness = false
