[package]
name = "ultima-db"
version = "0.1.0"
edition = "2024"
description = "Embedded in-memory B-tree store with MVCC"

[features]
default = []
fulltext = []
metrics = ["dep:metrics"]
persistence = ["dep:serde", "dep:bincode"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "2", features = ["serde"], optional = true }
metrics = { version = "0.24", optional = true }
dashmap = "6"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
# pprof 0.15 is incompatible with criterion 0.8 (Profiler trait mismatch)
# pprof = { version = "0.15", features = ["criterion", "flamegraph"] }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
tempfile = "3"
fjall = "3"
rocksdb = "0.24.0"
redb = "4.0.0"

[[bench]]
name = "ycsb_bench"
harness = false

[[bench]]
name = "ycsb_fjall_bench"
harness = false

[[bench]]
name = "ycsb_rocksdb_bench"
harness = false

[[bench]]
name = "ycsb_redb_bench"
harness = false

[[bench]]
name = "ycsb_multiwriter_bench"
harness = false

[[bench]]
name = "ycsb_multiwriter_rocksdb_bench"
harness = false

[[bench]]
name = "ycsb_multiwriter_fjall_bench"
harness = false

[[bench]]
name = "smallbank_bench"
harness = false
required-features = ["persistence"]

[[bench]]
name = "smallbank_scaling_bench"
harness = false
required-features = ["persistence"]

[[bench]]
name = "multiwriter_persistence_bench"
harness = false
required-features = ["persistence"]

[[bench]]
name = "smallbank_rocksdb_bench"
harness = false

[[bench]]
name = "smallbank_fjall_bench"
harness = false
