[workspace]
members = ["ultima_vector", "bench_workloads", "compare_benches", "autobench"]
exclude = ["formal/kernel"]

[package]
name = "ultima-db"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Embedded in-memory B-tree store with MVCC"
authors = ["Peter Knego"]
license = "Apache-2.0"
repository = "https://github.com/PeterKnego/ultima_db"
readme = "README.md"

[features]
default = []
fulltext = []
metrics = ["dep:metrics"]
persistence = ["dep:serde", "dep:bincode"]
# Exposes internal handles (e.g. BenchWal) for the benches/ crate. Not a public API.
bench-internals = ["persistence", "dep:memmap2"]
wal-iouring = ["persistence", "dep:io-uring"]
# Test-only fault injection for the Elle mutation-testing harness (task47).
# Off by default; compiled into no normal build. Inert unless ULTIMA_MUTATION is set.
mutation-testing = []

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "2", features = ["serde"], optional = true }
metrics = { version = "0.24", optional = true }
memmap2 = { version = "0.9", optional = true }
dashmap = "6"
crc32fast = "1"
io-uring = { version = "0.7", optional = true }
parking_lot = { version = "0.12", features = ["arc_lock"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
# pprof 0.15 is incompatible with criterion 0.8 (Profiler trait mismatch)
# pprof = { version = "0.15", features = ["criterion", "flamegraph"] }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
tempfile = "3"
ultima-bench-workloads = { path = "bench_workloads" }

[[bench]]
name = "ycsb_bench"
harness = false

[[bench]]
name = "ycsb_multiwriter_bench"
harness = false

[[bench]]
name = "smallbank_bench"
harness = false
required-features = ["persistence"]

[[bench]]
name = "multiwriter_scaling_bench"
harness = false
required-features = ["persistence"]

[[bench]]
name = "multiwriter_persistence_bench"
harness = false
required-features = ["persistence"]

[[bench]]
name = "checkpoint_impact_bench"
harness = false
required-features = ["persistence"]

[[bench]]
name = "singlewriter_persistence_bench"
harness = false
required-features = ["persistence"]

[[bench]]
name = "commit_scaling_bench"
harness = false
required-features = ["persistence"]

[[bench]]
name = "bulk_load_bench"
harness = false

[[bench]]
name = "wal_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "btree_insert_mut_bench"
harness = false

[[bench]]
name = "btree_remove_mut_bench"
harness = false

[[bench]]
name = "table_insert_e2e_bench"
harness = false

[[bench]]
name = "ycsb_bulk_load_ultima_batch_bench"
harness = false

[[bench]]
name = "ycsb_bulk_load_ultima_sorted_bench"
harness = false

[[example]]
name = "profile_commit"
required-features = ["persistence"]
