[package]
name = "ultima-autobench"
version = "0.1.0"
edition = "2024"
publish = false
description = "Autoresearch-style perf harness for ultima-db"
license = "Apache-2.0"

[dependencies]
ultima-db = { path = "..", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
wait-timeout = "0.2"
tempfile = "3"

[features]
# Build ultima-db with commit-path fault injection for scripts/elle_mutation.sh.
# Opt-in only — perf gates never enable it. See task47.
elle-mutation = ["ultima-db/mutation-testing"]
