[package]
name = "ultima-journal"
version = "0.1.0"
edition = "2024"
description = "Runtime-agnostic segmented append journal + durable atomic-value primitive"
authors = ["Peter Knego"]
license = "Apache-2.0"

[dependencies]
crc32fast = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "2", features = ["serde"], optional = true }

[features]
default = ["stable_value"]
stable_value = ["dep:serde", "dep:bincode"]
# Exposes `bench_support` (raw segment write + fsync primitives) so the
# autobench journal microbench can time the page-cache write and the fsync
# barrier in isolation. Not part of the supported API.
bench-support = []

[dev-dependencies]
tempfile = "3"
