[package]
name = "ultima-vector"
version = "0.1.0"
edition = "2024"
description = "HNSW vector search built on UltimaDB"

[features]
default = []
persistence = ["ultima-db/persistence", "dep:serde"]

[dependencies]
ultima-db = { path = ".." }
smallvec = "1"
roaring = "0.11"
rand = "0.10"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
pulp = "0.22"

[dev-dependencies]
rand = "0.10"
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

[[example]]
name = "with_persistence"
required-features = ["persistence"]

[[bench]]
name = "distance"
harness = false
