[package]
name = "ultima-vector"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "HNSW vector search built on UltimaDB"
authors = ["Peter Knego"]
license = "Apache-2.0"
repository = "https://github.com/PeterKnego/ultima_db"

[features]
default = []
persistence = ["ultima-db/persistence"]

[dependencies]
ultima-db = { path = ".." }
smallvec = "1"
roaring = "0.11"
rand = "0.10"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
pulp = "0.22"

[dev-dependencies]
rand = "0.10"
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

[[example]]
name = "with_persistence"
required-features = ["persistence"]

[[bench]]
name = "distance"
harness = false
